# xmonad-config

./: .gitignore  .shasum-xmobar  .shasum-xmonad  LICENSE  README.md  build  cabal.project.freeze  cabal.project.local  cspell.json  customEnv  flake.nix  hie.yaml  xmonad-config.cabal
app/: Main.hs
bar/: Main.hs
data/: taffybar.css
dist-newstyle/cache/: compiler  config
rofi-scripts/: launcher-style.rasi
rofi-scripts/powermenu/: confirm.rasi  powermenu.bash  style.rasi
wm/: Main.hs
