cabal-version:   3.4
name:            xmonad-config
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Trouble-Truffle
maintainer:      perigordtruffle7318@gmail.com
category:        Config
build-type:      Simple
extra-doc-files: CHANGELOG.md

executable xmonad-x86_64-linux
  main-is:          Main.hs
  other-extensions:
    BlockArguments
    LambdaCase
    TemplateHaskell
    QuasiQuotes
    PatternSynonyms
    BlockArguments

  build-depends:
    , base            >=4.15.1.0 && <5
    , containers      >=0.6.5
    , taffybar        >=4.0
    , xdg-basedir     >=0.2.2
    , xmonad          >=0.17.1
    , xmonad-contrib  >=0.17.1
    , unix
    , xmonad-extras
    , sdl2-mixer
    , process
    , PyF

  ghc-options:
    -Wall -Wcompat -rtsopts -with-rtsopts=-V0 -threaded -O2
    -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields
    -Wredundant-constraints

  hs-source-dirs:   wm
  default-language: GHC2021

executable taffybar
  main-is:          Main.hs
  other-extensions:
    BlockArguments
    LambdaCase

  build-depends:
    , base          >=4.15.1.0 && <5
    , X11
    , bytestring
    , containers
    , directory
    , filepath
    , gi-gtk
    , gtk-sni-tray
    , gtk-strut
    , haskell-gi-base
    , hostname
    , hslogger
    , process
    , split
    , text
    , time
    , taffybar>=3.2.0
    , transformers
    , xdg-basedir

  ghc-options:
    -Wall -Wcompat -rtsopts -with-rtsopts=-V0 -threaded -Widentities
    -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields
    -Wredundant-constraints

  hs-source-dirs:   bar
  default-language: GHC2021
